map overflow fix for smaller screens

--- a/frontend-adapters/react-app/src/main/reactsrc/src/styles/App.module.css
+++ b/frontend-adapters/react-app/src/main/reactsrc/src/styles/App.module.css
@@ -1,24 +1,25 @@
 #root {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
   align-items: center;
   background-size: cover;
   background: url("../assets/mars-bg.jpeg") no-repeat fixed center center;
   width: 100%;
   transition: 0.1s ease-in-out;
+  height: 100vh;
+  min-height: 100vh;
 }
 
 .mainPanels {
   display: flex;
   flex-direction: row;
-  width: 100vw;
-  justify-content: space-evenly;
-  flex-grow: 1;
-  padding: 0 50px;
+  width: 100%;
+  height: 0;
+  min-height: 0;
+  padding: 0 30px;
   transition: 0.3s ease-in-out;
-  gap: 30px;
-  overflow-y: scroll;
+  gap: 20px;
+  flex: 1;
 }
 
 .landRoverBtn:enabled,
