--- a/frontend-adapters/react-app/src/main/reactsrc/src/styles/LeftPanel.module.css
+++ b/frontend-adapters/react-app/src/main/reactsrc/src/styles/LeftPanel.module.css
@@ -4,4 +4,6 @@
     align-items: center;
     gap: 10px;
     width: 60%;
+    height: 100%;
+    flex: 1;
 }
