--- a/frontend-adapters/react-app/src/main/reactsrc/src/styles/Map.module.css
+++ b/frontend-adapters/react-app/src/main/reactsrc/src/styles/Map.module.css
@@ -3,10 +3,6 @@
     grid-gap: 1rem;
 }
 
-.container > div {
-
-}
-
 .cell {
     justify-content: center;
     align-items: center;
@@ -102,8 +98,12 @@
     align-items: center;
 }
 
+.interactiveMapWrapper {
+    width: 100%;
+    height: calc(100% - 90px);
+}
+
 .mapFlexWrapper {
-    flex-grow: 1;
     display: flex;
     align-items: center;
     justify-content: center;
